--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <!-- 第三部分：Quantum Encryption Meets Human Touch -->
         <section class="encryption">
-            <h2>QUANTUM ENCRYPTION MEETS HUMAN TOUCH</h2>
+            <h2><span class="first-line">QUANTUM ENCRYPTION</span><span class="second-line">MEETS HUMAN TOUCH</span></h2>
             <p class="encryption-description">
                 The world's first compact folding marvel,engineered at the frontier of 3nm precision.Where quantum meets nano —a masterpiece that graces the palm of your hand.
             </p>
