--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </section>
 
         <section class="vps">
-            <h2>VPS: YOUR 24/7 DIGITAL WORKFORCE</h2>
+            <h2><span class="first-line">VPS: YOUR 24/7</span> <span class="second-line">DIGITAL WORKFORCE</span></h2>
             <div class="vps-content">
                 <div class="vps-description">
                     <p>
@@ -176,7 +176,7 @@
         </section>
 
         <section class="camera-showcase">
-            <h2>AI DARKROOM MASTER: BEAUTIFYING TIME</h2>
+            <h2><span class="first-line">AI DARKROOM MASTER</span> <span class="second-line">BEAUTIFYING TIME</span></h2>
             <div class="camera-features-container">
                 <div class="camera-features">
                     <div class="horizontal-line-container">
