feat: 添加字体和视频和样式修改

--- a/ma-nao.html
+++ b/ma-nao.html
@@ -40,100 +40,106 @@
 
     <!-- 天体黎明区域 -->
     <section class="celestial-dawn">
-      <div class="content-wrapper">
-        <div class="feature-text">
-          <h2>CELESTIAL DARK</h2>
-          <p>Reflecting the deep black color<br />and cosmic circular patterns</p>
+      <div class="celestial-dawn-bg"></div>
+      <div class="celestial-dawn-content">
+        <div class="content-wrapper">
+          <div class="feature-text">
+            <h2>Phoenix Flame</h2>
+            <p>
+              Capturing the vibrant red-orange <br />
+              hues and dynamic energy
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="slide-controls">
-        <svg
-          class="prev-slide"
-          width="40.000000"
-          height="40.000000"
-          viewBox="0 0 40 40"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-        >
-          <desc>Created with Pixso.</desc>
-          <defs>
-            <clipPath id="clip185_140">
-              <rect
-                id=" icon"
-                width="16.000000"
-                height="16.000000"
-                transform="translate(12.000000 12.000000)"
-                fill="white"
-                fill-opacity="0"
-              />
-            </clipPath>
-          </defs>
-          <rect id="左" rx="20.000000" width="40.000000" height="40.000000" fill="#1E1E1E" fill-opacity="1.000000" />
-          <g clip-path="url(#clip185_140)">
-            <path
-              id="path"
-              d="M23.78 13.97L17.5 19.84L23.86 25.79C24.07 25.99 24.2 26.26 24.2 26.56C24.2 27.18 23.66 27.68 23 27.68C22.67 27.68 22.38 27.56 22.17 27.37L14.98 20.65C14.75 20.44 14.61 20.16 14.61 19.84C14.61 19.84 14.61 19.84 14.61 19.84C14.61 19.84 14.61 19.84 14.61 19.84C14.61 19.52 14.75 19.23 14.98 19.03L22.17 12.31L22.17 12.31C22.38 12.12 22.68 12 23 12C23.66 12 24.2 12.5 24.2 13.12C24.2 13.46 24.03 13.76 23.78 13.97Z"
-              fill="#535252"
-              fill-opacity="1.000000"
-              fill-rule="nonzero"
-            />
-          </g>
-        </svg>
-        <svg
-          class="next-slide"
-          width="40.000000"
-          height="40.000000"
-          viewBox="0 0 40 40"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-        >
-          <desc>Created with Pixso.</desc>
-          <defs>
-            <clipPath id="clip185_144">
-              <rect
-                id=" icon"
-                width="16.000000"
-                height="16.000000"
-                transform="matrix(-1 0 0 1 28 12)"
-                fill="white"
-                fill-opacity="0"
-              />
-            </clipPath>
-          </defs>
-          <rect
-            id="右"
-            rx="20.000000"
+        <div class="slide-controls">
+          <svg
+            class="prev-slide"
             width="40.000000"
             height="40.000000"
-            transform="matrix(-1 0 0 1 40 0)"
-            fill="#232323"
-            fill-opacity="1.000000"
-          />
-          <rect
-            id="右"
-            rx="19.500000"
-            width="39.000000"
-            height="39.000000"
-            transform="matrix(-1 0 0 1 40 0)"
-            stroke="#AAAAAA"
-            stroke-opacity="0"
-            stroke-width="1.000000"
-          />
-          <g clip-path="url(#clip185_144)">
-            <path
-              id="path"
-              d="M16.21 13.97L22.49 19.84L16.13 25.79C15.92 25.99 15.79 26.26 15.79 26.56C15.79 27.18 16.33 27.68 16.99 27.68C17.32 27.68 17.61 27.56 17.82 27.37L25.01 20.65C25.24 20.44 25.38 20.16 25.38 19.84C25.38 19.84 25.38 19.84 25.38 19.84C25.38 19.84 25.38 19.84 25.38 19.84C25.38 19.52 25.24 19.23 25.01 19.03L17.83 12.31L17.82 12.31C17.61 12.12 17.31 12 16.99 12C16.33 12 15.79 12.5 15.79 13.12C15.79 13.46 15.96 13.76 16.21 13.97Z"
-              fill="#FFFFFF"
+            viewBox="0 0 40 40"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <desc>Created with Pixso.</desc>
+            <defs>
+              <clipPath id="clip185_140">
+                <rect
+                  id=" icon"
+                  width="16.000000"
+                  height="16.000000"
+                  transform="translate(12.000000 12.000000)"
+                  fill="white"
+                  fill-opacity="0"
+                />
+              </clipPath>
+            </defs>
+            <rect id="左" rx="20.000000" width="40.000000" height="40.000000" fill="#1E1E1E" fill-opacity="1.000000" />
+            <g clip-path="url(#clip185_140)">
+              <path
+                id="path"
+                d="M23.78 13.97L17.5 19.84L23.86 25.79C24.07 25.99 24.2 26.26 24.2 26.56C24.2 27.18 23.66 27.68 23 27.68C22.67 27.68 22.38 27.56 22.17 27.37L14.98 20.65C14.75 20.44 14.61 20.16 14.61 19.84C14.61 19.84 14.61 19.84 14.61 19.84C14.61 19.84 14.61 19.84 14.61 19.84C14.61 19.52 14.75 19.23 14.98 19.03L22.17 12.31L22.17 12.31C22.38 12.12 22.68 12 23 12C23.66 12 24.2 12.5 24.2 13.12C24.2 13.46 24.03 13.76 23.78 13.97Z"
+                fill="#535252"
+                fill-opacity="1.000000"
+                fill-rule="nonzero"
+              />
+            </g>
+          </svg>
+          <svg
+            class="next-slide"
+            width="40.000000"
+            height="40.000000"
+            viewBox="0 0 40 40"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+          >
+            <desc>Created with Pixso.</desc>
+            <defs>
+              <clipPath id="clip185_144">
+                <rect
+                  id=" icon"
+                  width="16.000000"
+                  height="16.000000"
+                  transform="matrix(-1 0 0 1 28 12)"
+                  fill="white"
+                  fill-opacity="0"
+                />
+              </clipPath>
+            </defs>
+            <rect
+              id="右"
+              rx="20.000000"
+              width="40.000000"
+              height="40.000000"
+              transform="matrix(-1 0 0 1 40 0)"
+              fill="#232323"
               fill-opacity="1.000000"
-              fill-rule="nonzero"
             />
-          </g>
-        </svg>
+            <rect
+              id="右"
+              rx="19.500000"
+              width="39.000000"
+              height="39.000000"
+              transform="matrix(-1 0 0 1 40 0)"
+              stroke="#AAAAAA"
+              stroke-opacity="0"
+              stroke-width="1.000000"
+            />
+            <g clip-path="url(#clip185_144)">
+              <path
+                id="path"
+                d="M16.21 13.97L22.49 19.84L16.13 25.79C15.92 25.99 15.79 26.26 15.79 26.56C15.79 27.18 16.33 27.68 16.99 27.68C17.32 27.68 17.61 27.56 17.82 27.37L25.01 20.65C25.24 20.44 25.38 20.16 25.38 19.84C25.38 19.84 25.38 19.84 25.38 19.84C25.38 19.84 25.38 19.84 25.38 19.84C25.38 19.52 25.24 19.23 25.01 19.03L17.83 12.31L17.82 12.31C17.61 12.12 17.31 12 16.99 12C16.33 12 15.79 12.5 15.79 13.12C15.79 13.46 15.96 13.76 16.21 13.97Z"
+                fill="#FFFFFF"
+                fill-opacity="1.000000"
+                fill-rule="nonzero"
+              />
+            </g>
+          </svg>
 
-        <!-- <button class="prev-slide">&lt;</button>
-        <button class="next-slide">&gt;</button> -->
+          <!-- <button class="prev-slide">&lt;</button>
+          <button class="next-slide">&gt;</button> -->
+        </div>
       </div>
     </section>
 
@@ -205,32 +211,26 @@
         <div class="video-placeholder">
           <svg
             class="play-video-icon"
-            width="72.000000"
-            height="60.000000"
+            width="72"
+            height="60"
             viewBox="0 0 72 60"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
-            xmlns:xlink="http://www.w3.org/1999/xlink"
+            aria-label="播放视频"
+            role="button"
+            tabindex="0"
           >
-            <desc>Created with Pixso.</desc>
-            <defs />
-            <g opacity="0.400000" style="mix-blend-mode: normal">
+            <g opacity="0.4" style="mix-blend-mode: normal">
               <path
-                id="icon"
                 d="M0 6L0 54C0 57.31 2.68 60 6 60L66 60C69.31 60 72 57.31 72 54L72 6C72 2.68 69.31 0 66 0L6 0C2.68 0 0 2.68 0 6ZM66 54L6 54L6 6L66 6L66 54ZM28.5 37.79C28.5 38.86 29.07 39.85 30 40.39C30.92 40.92 32.07 40.92 33 40.39L46.5 32.59C47.42 32.06 47.99 31.07 47.99 30C47.99 28.92 47.42 27.93 46.5 27.4L33 19.6C32.07 19.06 30.92 19.06 29.99 19.6C29.06 20.14 28.49 21.13 28.5 22.2L28.5 37.79Z"
                 fill="#FFFFFF"
-                fill-opacity="1.000000"
-                fill-rule="nonzero"
-              />
-              <path
-                id="icon"
-                d="M0 54C0 57.31 2.68 60 6 60L66 60C69.31 60 72 57.31 72 54L72 6C72 2.68 69.31 0 66 0L6 0C2.68 0 0 2.68 0 6L0 54ZM6 54L6 6L66 6L66 54L6 54ZM30 40.39C30.92 40.92 32.07 40.92 33 40.39L46.5 32.59C47.42 32.06 47.99 31.07 47.99 30C47.99 28.92 47.42 27.93 46.5 27.4L33 19.6C32.07 19.06 30.92 19.06 29.99 19.6C29.06 20.14 28.49 21.13 28.5 22.2L28.5 37.79C28.5 38.86 29.07 39.85 30 40.39Z"
-                stroke="#707070"
-                stroke-opacity="0"
-                stroke-width="1.000000"
               />
             </g>
           </svg>
+          <div class="video-showcase-video-container">
+            <!-- TODO: 修改url -->
+            <video class="video-showcase-video" src="./images/test.mp4" muted loop></video>
+          </div>
         </div>
       </div>
     </section>
@@ -274,14 +274,26 @@
       <div class="content-wrapper">
         <h2>AI Darkroom Master: Beautifying Time</h2>
         <p>
-          With AI-driven optimization, every shot is perfected instantly. The intelligent system analyzes light, color, and composition to elevate your images, ensuring professional-grade quality with effortless precision, anytime, anywhere
+          With AI-driven optimization, every shot is perfected instantly. The intelligent system analyzes light, color,
+          and composition to elevate your images, ensuring professional-grade quality with effortless precision,
+          anytime, anywhere
         </p>
       </div>
     </section>
 
-    <section class="manao-image-section">
-      <div class="manao-content">
+    <!-- <section class="manao-image-section">
+      <div class="manao-content isfull">
         <img src="./images/phone-img.png" alt="phone-img" />
+      </div>
+    </section> -->
+    <section class="manao-photo-section">
+      <div class="manao-content isfull">
+        <img src="./images/photo-bg.png" alt="phone-img" />
+        <p class="photo-text photo-text-1">50MP AI dual camera system</p>
+        <p class="photo-text photo-text-2">OIS + EIS stabilization</p>
+        <p class="photo-text photo-text-3">Millisecond AI subject isolation</p>
+        <p class="photo-text photo-text-4">Professional results, effortless capture</p>
+        <p class="photo-text photo-text-5">Cinematic portrait engine</p>
       </div>
     </section>
 
@@ -315,6 +327,9 @@
               <p>Emergency location within 3 meters</p>
             </div>
           </div>
+          <p class="feature-tips">
+            * Regional Exclusivity, available in select markets.Connect with your private consultant for details.
+          </p>
         </div>
       </div>
     </section>
@@ -323,6 +338,7 @@
       <!-- AI翻译功能展示 -->
       <div class="features-translator">
         <div class="feature-content">
+          <div class="feature-content-title">THE AI TRANSLATOR</div>
           <div class="translator-window"></div>
           <div class="feature-text">
             <h2>THE AI TRANSLATOR</h2>
