feat: 添加轮播滚动动画~

--- a/ma-nao.html
+++ b/ma-nao.html
@@ -80,7 +80,10 @@
 
     <!-- 天体黎明区域 -->
     <section class="celestial-dawn">
-      <div class="celestial-dawn-bg"></div>
+      <div class="celestial-dawn-bg-wrapper">
+        <div class="celestial-dawn-bg"></div>
+        <div class="celestial-dawn-bg celestial-dawn-transition-bg"></div>
+      </div>
       <div class="celestial-dawn-content">
         <div class="content-wrapper">
           <div class="feature-text">
@@ -98,9 +101,6 @@
           <svg class="next-slide" width="40" height="40" aria-label="下一张" role="button">
             <use xlink:href="#icon-arrow-right"></use>
           </svg>
-
-          <!-- <button class="prev-slide">&lt;</button>
-          <button class="next-slide">&gt;</button> -->
         </div>
       </div>
     </section>
